<!-- 
 *  This is a part of amfontai Notes
 *  Copyright (C) 2013 Andrew Fontaine
 *
 *  amfontai Notes program is free software; you can redistribute it and/or
 *  modify it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation; either version 2 of the License, or
 *  (at your option) any later version.
 *
 *  amfontai Notes program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License along
 *  with this program; if not, write to the Free Software Foundation, Inc.,
 *  51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->
<resources>

    <string name="app_name">amfontai Notes</string>
    <string name="empty">Why not make some notes?</string>
    <string name="title_activity_note_detail">Edit Note</string>
    <string name="subject">Subject</string>
    <string name="date">Date</string>
    <string name="content">Enter a note!</string>
    <string name="save">Save</string>
    <string name="action_trash">Delete</string>
    <string name="action_add">Add Note</string>
    <string name="action_cloud">Word Cloud</string>
    <string name="action_log">Stats</string>
    <string name="title_activity_word_cloud">Word Cloud</string>
    <string name="title_activity_word_log">Word Log</string>
    <string name="total_characters">Total number of characters: </string>
    <string name="total_words">Total number of words: </string>
    <string name="total_logs">Total number of entries: </string>
    <string name="top_one_hundred">Top one hundred words: </string>

</resources>
