<!-- 
 *  This is a part of amfontai Notes
 *  Copyright (C) 2013 Andrew Fontaine
 *
 *  amfontai Notes program is free software; you can redistribute it and/or
 *  modify it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation; either version 2 of the License, or
 *  (at your option) any later version.
 *
 *  amfontai Notes program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License along
 *  with this program; if not, write to the Free Software Foundation, Inc.,
 *  51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="1"
        android:showAsAction="always" />
    <item android:id="@+id/action_cloud"
        android:title="@string/action_cloud"
        android:icon="@drawable/ic_action_cloud"
        android:orderInCategory="2"
        android:showAsAction="always" />
    <item android:id="@+id/action_log"
        android:icon="@drawable/ic_action_log"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/action_log"/>

</menu>
